    - If there's a dialog about it being blocked, check the "Unblock" checkbox

- App: Fixed audio device selected not found reset to default
- App: Fixed issue where Windows reports different Device IDs for Audio Devices every session
- MSHV: Fixed issue where an incomplete 'DX Grid' would break the map view
- Main: Fixed ignore not working on RECIEVE bar left-click
- Main: Added "New QSO CALLSIGN" to status messages on QSO log event
- Call Roster: Added Ctrl-L toggle "Uses LoTW"

- App: Identified an issue where some systems would go 'black screen' on startup
- Main: New "QTH" button: resets map to North, default zoom and re-centers on your grid (Ctrl-Z hotkey)
- Map: Higher resolution US County shapes
- Map: Backgroud color picker for each map: Settings -> Map -> Background Color
- Lookups: When using CALLOOK service; uses Lat, Long from result to get county
- Call Roster: Underline UTC timestamp on even decode cycles
- Call Roster: Fixed bug when Settings -> Features -> 'Clear on CQ' enabled and DX Call began with "CQ" eg: CQ3WWA would abort Tx
- Happy New Year!

App: Windows command line notification added to help batch file use
App: v1.24.09xx settings no longer importing on new installs due to compatibility issues
App: Fixed AEQD map position on new installs
App: Enabled POTA by default on new installs
App: Updated Chinese translations
App: Ctrl+Alt+MouseWheel to change zoom level in any window  (Ctrl-Zero as always to reset)
Call Roster: Fixed PR showing as a wanted US State
Call Roster: Very long "Watcher" values now displayed with "..." 
Chat: Left-click a callsign will do a lookup
Stats-Logbook: Added "Current Day UTC" filter checkbox to "When" column


Map: Fixed distant grid distortions in AEQD projection
App: Fixed missing JA grids
App: Fixed issue where MSHV not reporting TX_PWR
Award Tracker: Fixed QRZ.com 'Masters of ...' scoring

### Fixed


### Removed


[unreleased]: 